# We-can

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  experience.py  landing.py  prep.py  resume.py  review.py  router.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/seeds/: experiences.json  questionbank.json
backend/app/providers/: base.py  factory.py  mock.py  openai_like.py  prompts.py
backend/app/schemas/: admin.py  auth.py  common.py  experience.py  landing.py  prep.py  resume.py  review.py
backend/app/services/: admin_service.py  auth_service.py  experience_service.py  landing_service.py  prep_service.py  resume_service.py  review_service.py  seed_loader.py
backend/app/utils/: files.py  text.py
backend/scripts/: build_experiences.py  build_questionbank.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_experience_service.py  test_landing_service.py  test_prep_service.py  test_resume_service.py  test_review_service.py
docs/: API.md  ARCHITECTURE.md  AUTH.md  DESIGN.md  SKILLS.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  authTypes.ts  (+3 more)
scripts/: gen_assets.sh
(+38 files in other folders)
